--- a/README
+++ b/README
@@ -1,6 +1,10 @@
 = logmerge
 
-Rubyforge Project:
+Logmerge is hosted on RubyGems.org starting from version 1.0.1
+
+http://rubygems.org/gems/logmerge
+
+(Original) Rubyforge Project:
 
 http://rubyforge.org/projects/rctools/
 
