--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 = logmerge
 
-Logmerge is hosted on RubyGems.org starting from version 1.0.1
+Logmerge is hosted on RubyGems.org starting with version 1.0.1
 
 http://rubygems.org/gems/logmerge
 
